--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">TodoApp</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="calendar">Calendar</string>
+    <string name="todo">Todo</string>
+    <string name="account">Account</string>
+    <string name="setting">Setting</string>
+    <string name="menu">Menu</string>
+    <string name="username">Username</string>
 </resources>
