Update recycler item view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="or_login_with">Hoặc đăng nhập bằng</string>
     <string name="them_cong_viec">Thêm công việc</string>
     <string name="ten_cong_viec">Tên công việc</string>
+    <string name="them_danh_muc">Thêm danh mục</string>
 </resources>
