--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,11 @@
     <string name="app_name">TodoList</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="calendar">Calendar</string>
+    <string name="calendar">Lịch</string>
     <string name="todo">Todo</string>
-    <string name="account">Account</string>
-    <string name="setting">Setting</string>
+    <string name="account">Tài khoản</string>
+    <string name="setting">Cài đặt</string>
+    <string name="logout">Đăng xuất</string>
     <string name="menu">Menu</string>
     <string name="username">Username</string>
     <string name="or_login_with">Hoặc đăng nhập bằng</string>
@@ -15,4 +16,8 @@
     <string name="ten_danh_muc">Tên danh mục</string>
     <string name="huy">Hủy</string>
     <string name="them_moi">Thêm mới</string>
+    <string name="category">Danh mục</string>
+    <string name="sua_danh_muc">Sửa danh mục</string>
+    <string name="cap_nhat">Cập nhật</string>
+    <string name="xoa">Xóa</string>
 </resources>
