Add google auth with firebase

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,8 @@
     <string name="sua_danh_muc">Sửa danh mục</string>
     <string name="cap_nhat">Cập nhật</string>
     <string name="xoa">Xóa</string>
+
+    <string name="facebook_app_id">393900483629456</string>
+    <string name="fb_login_protocol_scheme">fb393900483629456</string>
+    <string name="facebook_client_token">d6554552259be82751bf27e343a81cad</string>
 </resources>
